[metadata]
name = restpite
version = 0.1.0
description = Python DSL for easily testing REST services
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = testing, api, rest
project_urls =
    Documentation = https://restpite.readthedocs.io/
    Changelog = https://restpite.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/symonk/restpite/issues

[options]
packages = restpite
install_requires =
    requests==2.25.0
python_requires = >=3.8
setup_requires =
    setuptools>=40.0
    setuptools-scm==4.1.2
zip_safe = no

[bdist_wheel]
universal = 1

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = restpite
default_section = THIRDPARTY
forced_separate = tests
not_skip = __init__.py
skip = .tox,.eggs,ci/templates

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
ignore_errors = False

[flake8]
max-line-length = 120
exclude = .tox,.eggs,ci/templates

[aliases]
# Define setup.py command aliases here
test = pytest
