#  ____           _         _ _
# |  _ \ ___  ___| |_ _ __ (_) |_ ___
# | |_) / _ \/ __| __| '_ \| | __/ _ \
# |  _ <  __/\__ \ |_| |_) | | ||  __/
# |_| \_\___||___/\__| .__/|_|\__\___|
#                    |_|

[metadata]
name = restpite
version = 0.1.4
description = Python DSL for easily testing REST services
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = testing, api, rest
project_urls =
    Documentation = https://restpite.readthedocs.io/
    Changelog = https://restpite.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/symonk/restpite/issues

[options]
packages = restpite
install_requires =
    httpx==0.17.1
    h2==4.0.0
    marshmallow-dataclass==8.4.1
python_requires = >=3.8
setup_requires =
    setuptools>=54.2.0
    setuptools-scm==6.0.1
zip_safe = no

[options.extras_require]
testing =
        pytest==6.2.3
        pytest-mock==3.5.1
        pytest-cov==2.11.1
        codecov==2.1.11
        respx==0.16.3
        pytest-asyncio==0.15.1

[bdist_wheel]
universal = 1

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
force_single_line = True
known_first_party = restpite
default_section = THIRDPARTY
forced_separate = tests
skip = .tox,.eggs,ci/templates,

[mypy]
mypy_path = 'restpite'
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
ignore_errors = False

[flake8]
max-line-length = 120
exclude = .tox,.eggs,ci/templates
